add start.lua script

--- a/lua-5.2.0/wince/lua52dll.vcproj
+++ b/lua-5.2.0/wince/lua52dll.vcproj
@@ -156,6 +156,7 @@
 				DelayLoadDLLs="$(NOINHERIT)"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/lua52dll.pdb"
+				GenerateMapFile="true"
 				SubSystem="0"
 				StackReserveSize="65536"
 				StackCommitSize="4096"
