fix release build and add test code

--- a/alien/wince/core.vcproj
+++ b/alien/wince/core.vcproj
@@ -141,8 +141,8 @@
 				ExecutionBucket="7"
 				Optimization="2"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories="..\..\lua-5.2.0\src"
-				PreprocessorDefinitions="NDEBUG;_WIN32_WCE=$(CEVER);UNDER_CE;$(PLATFORMDEFINES);WINCE;_WINDOWS;_USRDLL;CORE_EXPORTS;$(ARCHFAM);$(_ARCHFAM_);_UNICODE;UNICODE"
+				AdditionalIncludeDirectories="&quot;..\..\lua-5.2.0\src&quot;;libffi_arm_wince"
+				PreprocessorDefinitions="NDEBUG;_WIN32_WCE=$(CEVER);UNDER_CE;$(PLATFORMDEFINES);WINCE;_WINDOWS;_USRDLL;CORE_EXPORTS;$(ARCHFAM);$(_ARCHFAM_);_UNICODE;UNICODE;_TIME_T_DEFINED"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
